changes for week

--- a/about_jgc/team_bios/content-amy.html
+++ b/about_jgc/team_bios/content-amy.html
@@ -8,24 +8,10 @@
 <br>
 <p>
 <img class="bio-std" src="/images/team/Gerstein.jpg">
-Amy Gerstein has served as Executive Director of the John W. Gardner Center
-for Youth and Their Communities since August 2009. Prior to that Amy was an
-education research and policy consultant providing services to foundations,
-educational organizations and other nonprofits on issues of leadership
-development, strategic planning, organizational development, evaluation and
-instructional improvement. Primarily working in the field of evaluation research,
-Amy Gerstein engaged in formative and strategic relationships with clients. Dr.
-Gerstein’s work involved policy, research, curriculum and instruction, evaluation
-design, district reform, professional development and project management.</p>
+
+<p>Amy Gerstein joined the Graduate School of Education as Executive Director of the John W. Gardner Center for Youth and Their Communities in 2009. In this capacity, she provides leadership and strategic direction for the Center’s community-based research and policy work. Gerstein brings the rich experience of a career in educational policy and research, curriculum and instruction, district reform, professional development and project management to her leadership role at the Gardner Center. With extensive ties to Stanford’s near-neighbor community as well as a national profile in the fields of education and youth development, Gerstein is actively involved in fostering relationships between the university and youth-serving organizations to catalyze community change – close to home and in cities across the country. A skilled coalition-builder, she oversees a staff of researchers and policy analysts engaged in a program of rigorous research and capacity building that brings together and informs practitioners, policy makers, educators and youth advocates.</p> 
 <br>
-<p>Dr. Gerstein has also served as the Executive Director of the Noyce Foundation in Palo Alto, California.
-Dr. Gerstein directed the Initiative for Professional Development Research and Policy at the Foundation
-and provided grant support and guidance to other nonprofits and programs involved in research and
-policy work. Prior to that, Dr. Gerstein served as the Executive Director of the Coalition of Essential
-Schools, an international school reform network. Previous to this position, she was the Associate
-Director of the Bay Area School Reform Collaborative in San Francisco. She has also taught high school
-science, outdoor education and teacher education. Amy holds a Ph.D. in Education from Stanford
-University and a BA in Geology-Biology from Brown University.</p>
+<p>Prior to arriving at the Gardner Center, Gerstein was Executive Director of the Noyce Foundation, and Executive Director of the Coalition of Essential Schools. She has been a consultant to foundations, educational organizations and nonprofits and has taught high school science, outdoor education and teacher education. Gerstein is a founding member of the California Collaborative for District Reform, and serves as Vice-Chair of the East Palo Alto YMCA. She holds a PhD in Education from Stanford University and a BA in Geology-Biology from Brown University.</p>
 
          </div>
 
