--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ document.createElement("article" );
 					<ul class="pdf">
 <br>
 <li><a href=http://www.rwjf.org/en/research-publications/find-rwjf-research/2013/05/better-recess-better-school-day.html class="link-homepage-feature">Does Better Recess = A Better School Day?</a></li> 			
-<li><a class="link-homepage-feature" href="http://jgc.stanford.edu/resources/publications/GardnerCenter_RB_ECELinkages_2013.pdf" class="link-no-underline">Quality and Continuity of Practice: ECE & Community School Settings</a></li>
+<li><a class="link-homepage-feature" href="http://www.wholechildeducation.org/blog/from-data-to-action-a-community-approach-to-improving-youth-outcomes" class="link-no-underline">From Data to Action: Creating a Virtual Youth Sector</a></li>
 <li><a class="link-homepage-feature" href="https://ed.stanford.edu/news/san-mateo-county-preschool-program-bridges-achievement-gap-study-shows">San Mateo County Program Bridges Achievement Gap, Study Shows</a></li>
 
 						
