video embeddeda and aligned with sidebar

--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -4,21 +4,15 @@
 
 
         <div class="jgc-content-feature-item-left">
-<h1 class="title-page-header-big">Tri-Level College Readiness Indicator Systems (CRIS)</h1>
- <br>
+<h1 class="title-page-header-big-left">Tri-Level College Readiness Indicator Systems (CRIS)</h1>
 
 <div class="right-side-with-video"> <!--start video display-->
-   <iframe class="youtube-player" type="text/html" width="224" height="126" src="http://www.youtube.com/embed/V8rNGkiYfBo" allowfullscreen frameborder="0">
+   <iframe class="youtube-player" type="text/html" width="250" src="http://www.youtube.com/embed/V8rNGkiYfBo" allowfullscreen frameborder="0">
    </iframe>
    <br><br>
 <aside>
- <div class="right-side-box-under-video">
-   <!--begin video embedded in box-->
-   <iframe class="youtube-player" type="text/html" width="224" height="126" src="http://www.youtube.com/embed/V8rNGkiYfBo" allowfullscreen frameborder="0">
-   </iframe>
-   <!--end video embedded in box-->
-   <br>
-  <h1 class="content-text-header">Partner Organizations</h1>
+<div class="right-side-box-under-video">
+<h1 class="content-text-header">Partner Organizations</h1>
 
  <ul>
 <li>Annenberg Institute for School Reform </li>
@@ -43,6 +37,8 @@
 </aside>
 
 </div> <!--end of right side with video display-->
+
+<br><br><br> <!---spacing under title-->
 
 <p>Education leaders across the country are confounded by a growing phenomenon:  too many students are not college ready when they leave high school.  Although indicators exist to identify students at-risk of dropping out of high school, few indicators of students’ college readiness are currently in place, and few districts have linked indicators to practices and policies in ways that would enable action to create meaningful, lasting change. </p>
 
