video and okf additions

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -26,11 +26,6 @@
 	  <p><a href="mailto:gerstein@stanford.edu">gerstein@stanford.edu</a></p>
 	  <br>
 
-          <a class="header-link" href="/about_jgc/team_bios/kara.html">Kara Dukakis</a>
-	  <p>Associate Director</p>
-(650) 721-2971<br>	  
-<p><a href="mailto:kdukakis@stanford.edu">kdukakis@stanford.edu</a></p>
-
 	  <hr class="short-thick-rule">
           
 	 
@@ -66,7 +61,11 @@
 (650) 723-3099<br>	  
 <p><a href="mailto:larissa.collins@stanford.edu">larissa.collins@stanford.edu</a></p>
           <br>
-
+          <a class="header-link" href="/about_jgc/team_bios/kara.html">Kara Dukakis</a>
+	  <p>Senior Community Engagement Associate</p>
+(650) 721-2971<br>	  
+<p><a href="mailto:kdukakis@stanford.edu">kdukakis@stanford.edu</a></p>
+<br>
  <a class="header-link" href="/about_jgc/team_bios/nina.html">Nina Duong</a>
 	  <p>Project Coordinator</p>
 (650) 498-4889<br>	  
