--- a/our_work/content-yda.html
+++ b/our_work/content-yda.html
@@ -128,7 +128,7 @@ YDA is well underway in San Mateo County, CA and San Francisco County, CA and is
 
 in development in Santa Clara, and Alameda Counties as well. For more information please
 
-contact Kara Dukakis, Associate Director, John W. Gardner Center, at (650) 721.2971 or
+contact Kara Dukakis, Senior Community Engagement Associate, John W. Gardner Center, at (650) 721.2971 or
 
 <a href= "mailto:kdukakis@stanford.edu">kdukakis@stanford.edu.</a>
 
