--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -8,7 +8,7 @@
 <span class="content-bold">2013</span>
 <ul style="list-style: none;">
 <li><a href="/resources/reports/FamilyEngagementIssueBrief2013.pdf" class="link-no-underline">A Study of Family Engagement in Community Schools</a></li>
-<li><a href="/resources/publications/OKFPASS-2ResearchBrief2013.pdf" class="link-no-underline">PASS-2: Putting Youth Contribution at the Center of Positive Youth Development in Oakland High School</a></li>
+<li><a href="/resources/reports/OKFPASS-2IssueBrief.pdf" class="link-no-underline">PASS-2: Putting Youth Contribution at the Center of Positive Youth Development in Oakland High Schools</a></li>
 <li><a href="/resources/publications/GardnerCenter_RB_ECELinkages_2013.pdf" class="link-no-underline">Improving the Quality and Continuity of Practice Across Early Childhood Education and Elementary Community School Settings</a></li>
 <li><a href="/resources/publications/RCSDSurveyIssueBriefFinal11413.pdf" class="link-no-underline">Academic Demands & Student Achievement: A View from Middle School Classrooms in Redwood City</a></li>
 
