--- a/partners/content-become_partner.html
+++ b/partners/content-become_partner.html
@@ -7,7 +7,7 @@
 <br>
 <p>The JGC partners with entities at the setting (school or classroom) and systems levels (school districts, public agencies at the city and county levels, and community based organizations).  We do not provide direct services to youth at this time.  However, under appropriate circumstances, we work with youth to conduct research, drawing from our extensive past experience developing and implementing our YELL program and curriculum.</p>
 <br>
-<p>We recommend that prospective partners review our website to learn about our work and the way we work, followed by contact with our Associate Director, Kara Dukakis to determine fit.  Kara can be reached at <a href="mailto:kdukakis@stanford.edu">kdukakis@stanford.edu</a>.</p>
+<p>We recommend that prospective partners review our website to learn about our work and the way we work, followed by contact with our Senior Community Engagement Associate Kara Dukakis to determine fit.  Kara can be reached at <a href="mailto:kdukakis@stanford.edu">kdukakis@stanford.edu</a>.</p>
 
          </div>
 
