--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -7,7 +7,7 @@
 <h1 class="title-page-header-big-left">Tri-Level College Readiness Indicator Systems (CRIS)</h1>
 
 <div class="right-side-with-video"> <!--start video display-->
-   <iframe class="youtube-player" type="text/html" width="250" src="http://www.youtube.com/embed/V8rNGkiYfBo" allowfullscreen frameborder="0">
+   <iframe class="youtube-player" type="text/html" width="250" src="http://www.youtube.com/embed/GQAm4JDL-wc" allowfullscreen frameborder="0">
    </iframe>
    <br><br>
 <aside>
