search update plus weekly changes and partner removal

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -7,11 +7,9 @@
 
 <br>
 <br>
-<a class="link-underlined" href="http://bit.ly/10Wo5f0" target="_blank">Project Coordinator</a>
+<a class="link-underlined" href="https://stanfordcareers.stanford.edu/job-search?jobId=60076" target="_blank">CORE Project Facilitator</a>
 
-<br>
-<br>
-<a class="link-underlined" href="https://www.sree.org/career/pdf/214.pdf" target="_blank">Social Science Research Associate</a>
+
          </div>
 
        </div>
