--- a/content-menu-top-search.html
+++ b/content-menu-top-search.html
@@ -10,7 +10,7 @@
   <div id="container">
     <header>
     	<div id="navbar">
-    	  <a href="/"><img src="/images/2012FebTopLogoTrans3.png" /></a>
+    	  <a href="/"><img src="/images/banner-03-29-13a.jpg" /></a>
 
           <script type="text/javascript" src="//www.google.com/jsapi"></script>
           <script type="text/javascript">
@@ -38,17 +38,20 @@
     <div id="sub_menu">
       <ul class="sf-menu">
         <li class="current">
-          <a href="#">About JGC</a>
+          <a href="#">About Us</a>
           <ul>
             <li>
-              <a href="/about_jgc/mission.html">Mission & Principles</a>
+              <a href="/about_jgc/welcome.html">Welcome</a>
+            </li>
+            <li class="current">
+              <a href="/about_jgc/team.html">Who We Are</a>
+            </li>
+            <li>
+              <a href="/about_jgc/mission.html">What We Do</a>
             </li>
             <li>
               <a href="/about_jgc/jwg.html">John W. Gardner</a>
             </li> 
-            <li class="current">
-              <a href="/about_jgc/team.html">Our Team</a>
-            </li>
             <li class="current">
               <a href="/about_jgc/stanford.html">At Stanford</a>
             </li>
@@ -104,6 +107,7 @@
       <span id="donate-button">
         <a href="/donate.html"><img src="/images/nav_donate2.jpg"></a>
       </span>
+
     </div>
 
     <br clear="all">
