--- a/about_jgc/team_bios/content-milbrey.html
+++ b/about_jgc/team_bios/content-milbrey.html
@@ -9,26 +9,7 @@
 <br>
 <p>
 <img class="bio-std" src="/images/team/Milbrey.jpg">
-Milbrey McLaughlin is the Founding Director of the John W. Gardner Center for
-Youth and Their Communities at Stanford University. She is also the Co-Director of
-the Center for Research on the Context of Teaching, an interdisciplinary research
-center engaged in analyses of how teaching and learning are shaped by teachers’
-organizational, institutional, and social-cultural contexts. As the David Jacks
-Professor of Education and Public Policy at Stanford University’s School of
-Education, Dr. McLaughlin’s research combines studies of K-12 education policy in the U.S and work on the
-broad question of community-school collaboration to support youth development.
-</p>
-<br>
-<p>At Stanford, Dr. McLaughlin teaches Urban Youth and Their Institutions; Best Practices in Youth
-Development; Policy Analysis in Education; and Macro and Micro Issues in Policy Analysis. She has
-published articles and books that consider issues such as youth and community development, policy
-implementation and situated practice, along with the role of neighborhood organizations in the lives of
-inner-city youth. Dr. McLaughlin has served as a member of multiple boards, including the National
-Network for Youth, Children and Youth Community Health Initiative of the California Wellness Foundation,
-the Irvine Foundation Urban Initiative, Partners in School Innovation and the Center for Research on Equity
-and Diversity in Education. She was a member of the National Academy of Sciences committee that
-produced the volume Community Programs to Promote Youth Development and currently serves on the
-National Academy of Science’s Committee on Adolescent Health and Development.</p>
+Milbrey McLaughlin, Ed.D. is the David Jacks Professor of Education and Public Policy, Emerita, at Stanford University and the Founding Director of the John W. Gardner Center for Youth and Communities. She also is Co‑Director of the Center for Research on the Context of Teaching, an interdisciplinary research center engaged in analyses of how teaching and learning are shaped by teachers’ organizational, institutional, and social‑cultural contexts.  McLaughlin has focused throughout her career on the various institutional contexts and policies that shape youth outcomes-- schools and community-based institutions most particularly.  The Gardner Center embodies McLaughlin’s interest in identifying and understanding the cross-institutional issues that shape with settings within and through which youth move, and in advancing a youth sector stance to inform policy and practice.  She is the author or co‑author of many books, articles, and chapters on education policy issues, contexts for teaching and learning, productive environments for youth, and community‑based organizations.  Dr. McLaughlin holds an Ed.M and Ed.D in education policy from the Harvard Graduate School of Education and a B.A. in philosophy from Connecticut College.</p>
 
          </div>
 
