--- a/our_work/content-yell.html
+++ b/our_work/content-yell.html
@@ -5,10 +5,14 @@
         <div class="jgc-content-feature-item-left">
    <h1 class="title-page-header-big">Youth Engaged in Leadership and Learning (YELL)</h1>
 
-<br>
 
+
+<div class="right-side-with-video"> <!--start video display-->
+   <iframe class="youtube-player" type="text/html" width="250" src="http://www.youtube.com/embed/UKOeqaDyqpg" allowfullscreen frameborder="0">
+   </iframe>
+   <br><br>
 <aside>
-    <div class="right-side-box">
+<div class="right-side-box-under-video">
 <h1 class="content-text-header">Publications</h1>
 <br>
 <ul>
@@ -61,9 +65,11 @@
 <br>
 <p>Please take a moment to let us know who you are and to share your response to this tool. We value your feedback. Please send your comments to Mary Hofstedt at <a href="hofstedt@stanford.edu">hofstedt@stanford.edu</a></p>
   
-    
-    </div> <!--end right side box div-->
-    </aside>
+     </div> <!--end right side box div-->
+</aside>
+
+</div> <!--end of right side with video display-->   
+   
 
 <span class="content-bold">What is YELL?</span>
 <p>YELL is a set of curricular resources available to anyone interested in training and engaging youth as partners and leaders within their communities. The JGC’s YELL Handbook can help you to:</p>
