new files added

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -49,7 +49,11 @@
 (650) 724-4673<br>	  
 <p><a href="mailto:gborsato@stanford.edu">gborsato@stanford.edu</a></p>
           <br>
-
+<a class="header-link" href="/about_jgc/team_bios/maureen.html">Maureen Carew</a>
+	  <p>Senior Community Engagement Associate</p>
+(650) 497-4008<br>
+	  <p><a href="mailto:carew@stanford.edu">carew@stanford.edu</a></p>
+<br>
           <a class="header-link" href="/about_jgc/team_bios/sebastian.html">Sebastian Castrechini</a>
 	  <p>Senior Policy Analyst</p>
 (650) 721-1633<br>
