--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -93,9 +93,10 @@
 <hr class="short-rule">
            <h1 class="content-text-header">S</h1>
 		<ul style="list-style: none;">
-			<li><a href="saludamerica.html">Salud America</a></li>			
+			<li><a href="saludamerica.html">Salud America</a></li>	
+<li><a href="bts.html">San Francisco Bridge to Success</a></li>		
 			<li><a href="healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>
-			<li><a href="bts.html">San Francisco Bridge to Success</a></li>
+			<li><a href="shss.html">Sequoia High School's School Climate Survey</a></li>
 			<li><a href="strc.html">Sequoia High School Teen Resource Center</a></li>
 			<li><a href="soccer">Soccer for Success</a></li>
 			<li><a href="pps">Summer Dreamers' Academy Evaluation - Pittsburgh Public Schools</a></li>
