--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -7,6 +7,8 @@
 <br>
 <span class="content-bold">2013</span>
 <ul style="list-style: none;">
+<li><a href="/resources/publications/DCYF_IB_7.2013.pdf" class="link-no-underline">Participation Among San Francisco Unified School District Students in Programs Offered by the Department of Children, Youth, & Their Families</a></li>
+<li><a href="/resources/publications/SHSS_IB_7.2013.pdf" class="link-no-underline">Examining Students' Perceptions of the School Environment: Sequoia High School's School Climate Survey</a></li>
 <li><a href="/resources/reports/FamilyEngagementIssueBrief2013.pdf" class="link-no-underline">A Study of Family Engagement in Community Schools</a></li>
 <li><a href="/resources/reports/OKFPASS-2IssueBrief.pdf" class="link-no-underline">PASS-2: Putting Youth Contribution at the Center of Positive Youth Development in Oakland High Schools</a></li>
 <li><a href="/resources/publications/GardnerCenter_RB_ECELinkages_2013.pdf" class="link-no-underline">Improving the Quality and Continuity of Practice Across Early Childhood Education and Elementary Community School Settings</a></li>
