--- a/resources/content-snapshots.html
+++ b/resources/content-snapshots.html
@@ -6,6 +6,12 @@
           <h1 class="title-page-header-big">Snapshots</h1>
 
 <br>
+<span class="content-bold">2013</span>
+<ul style="list-style: none;">
+<li><a href="/resources/publications/DCYF_SS_7.2013.pdf" class="link-no-underline">Participation Among San Francisco Unified School District Students in Programs Offered by the Department of Children, Youth, & Their Families</a></li>
+<li><a href="/resources/publications/SHSS_SS_7.2013.pdf" class="link-no-underline">Examining Students' Perceptions of the School Environment: Sequoia High School's School Climate Survey</a></li>
+</ul>
+<br>
 <span class="content-bold">2012</span>
 <ul style="list-style: none;">
 <li><a href="/resources/publications/PFA_Snapshot2012_Final.pdf" class="link-no-underline">Educational Outcomes for <i>Preschool for All</i> Participants in Redwood City School District—Update</a></li>
