minor edit change

--- a/our_work/content-shss.html
+++ b/our_work/content-shss.html
@@ -12,26 +12,26 @@
 
       <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
-<li>Sequoia High School District</li>
+<li>Sequoia Union High School District</li>
 <li>Redwood City School District</li>
 </ul>
 <br>
 <h1 class="content-text-header">Publications</h1>
 <ul>
-<li>Examining Students' Perceptions of the School Environment: Sequoia High School's School Climate Survey (<a href="/resources/publications/SHS_IB_7.2013.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/SHS_SS_7.2013.pdf" class="link-no-underline">Snapshot</a>)</li>
+<li>Examining Students' Perceptions of the School Environment: Sequoia High School's School Climate Survey (<a href="/resources/publications/SHSS_IB_7.2013.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/SHSS_SS_7.2013.pdf" class="link-no-underline">Snapshot</a>)</li>
 </ul>
 
     
     </div> <!--end right side box div-->
     </aside>
 
-<p>Research has shown that adolescents’ perceptions of the school climate can influence their attendance, motivation to learn, and health risk-taking behaviors. School climate is typically measured by asking students to report what it feels like to be learning in a particular school setting. Studies demonstrate that a school’s climate can either increase students’ vulnerabilities or promote their resiliency.
+<p>Studies demonstrate that a school’s climate can either increase students’ vulnerabilities or promote their resiliency. For instance, research has shown that adolescents’ perceptions of the school climate can influence their attendance, motivation to learn, and health risk-taking behaviors. 
 <br>
 <br>
-Sequoia High School (SHS) in the Sequoia Union High School District has long been interested in school climate issues, and school and district leaders asked the Gardner Center to help create a revised and more valid survey. We collaborated with SHS in the 2011-12 academic year to analyze the results of this new survey, which tapped all SHS students’ viewpoints of the school environment (e.g., sense of safety).  We also partnered with the Redwood City School District (RCSD) to examine the degree to which students’ perceptions of the school climate change as they transition from RCSD middle schools to Sequoia High School
+Sequoia High School in the Sequoia Union High School District has long been interested in school climate issues. Towards this end, school and district leaders asked the Gardner Center to help create a revised and more valid survey. We collaborated with Sequoia HS in the 2011-12 academic year to analyze the results of this new survey, which tapped all Sequoia HS students’ viewpoints of the school environment (e.g., sense of safety).  We also partnered with the Redwood City School District (RCSD) to examine the degree to which students’ perceptions of the school climate change as they transition from RCSD middle schools to Sequoia HS.
 <br>
 <br>
-Gardner Center researchers found that high school students’ demographic, academic, and disciplinary backgrounds are related to how they perceive different dimensions of the school environment.  In particular, males, 11th graders, and students with at least one suspension reported fewer positive experiences at Sequoia High School compared to their counterparts. Using the Gardner Center’s Youth Data Archive (YDA), researchers also discovered that the transition from 8th grade in RCSD to SHS had a positive influence on those 8th grade students who reported low average perceptions of overall care at their middle school.
+Gardner Center researchers found that high school students’ demographic, academic, and disciplinary backgrounds are related to how they perceive different dimensions of the school environment.  In particular, males, 11th graders, and students with at least one suspension reported fewer positive experiences at Sequoia HS compared to their counterparts. Using the Gardner Center’s Youth Data Archive (YDA), researchers also discovered that the transition from 8th grade in RCSD to Sequoia HS had a positive influence on those 8th grade students who reported low average perceptions of overall care at their middle school.
 <br>
 <br>
 Although present findings are based on survey results from only one year, they still show that variations exist among students’ perceptions of the campus environment. Thus, implementing new practices and routines may help increase the engagement of vulnerable students. Results from this study help inform our partners’ ongoing work to improve all students’ school experiences.
