--- a/about_jgc/content-directions.html
+++ b/about_jgc/content-directions.html
@@ -11,7 +11,7 @@
 <h1 class="content-page-header">John W. Gardner Center for Youth and Their Communities</h1>
 Stanford University School of Education<br>
 Littlefield Center<br>
-365 Lasuen Mall, 3rd Floor<br>
+365 Lasuen Street, 3rd Floor<br>
 Stanford, CA 94305-2068<br>
 <br>
 
@@ -30,7 +30,7 @@ Stanford, CA 94305-2068<br>
 <ul>
 </ul>
 <br>
-<h1 class="content-bold">Google Directions</h1><br><script src="//www.gmodules.com/ig/ifr?url=http://hosting.gmodules.com/ig/gadgets/file/114281111391296844949/driving-directions.xml&amp;up_fromLocation=&amp;up_myLocations=365%20Lausen%20Mall%2C%20Stanford%2C%20CA%20%7C%20560%20Wilbur%20Way%2C%20Stanford%2C%20CA&amp;up_defaultDirectionsType=&amp;up_autoExpand=&amp;synd=open&amp;w=320&amp;h=55&amp;brand=light&amp;lang=en&amp;country=US&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js"></script>
+<h1 class="content-bold">Google Directions</h1><br><script src="//www.gmodules.com/ig/ifr?url=http://hosting.gmodules.com/ig/gadgets/file/114281111391296844949/driving-directions.xml&amp;up_fromLocation=&amp;up_myLocations=365%20Lausen%20Street%2C%20Stanford%2C%20CA%20%7C%20560%20Wilbur%20Way%2C%20Stanford%2C%20CA&amp;up_defaultDirectionsType=&amp;up_autoExpand=&amp;synd=open&amp;w=320&amp;h=55&amp;brand=light&amp;lang=en&amp;country=US&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js"></script>
 <br>
 
 
@@ -43,7 +43,7 @@ From the Palo Alto Caltrain stop, free <a class="link-underlined" href="http://t
 <ul>
 <li>Face the Main Quad.
 <li>	Turn left and walk down Serra Mall.</li>
-<li>	Turn left on Lasuen Mall.</li>
+<li>	Turn left on Lasuen Street.</li>
 <li>	The Littlefield Center will be directly ahead.</li>
 <li>	Use the West Lobby doors to the left of the archway to access the elevator to the Gardner Center's office on the third floor.</li>
 
