--- a/index.html
+++ b/index.html
@@ -115,16 +115,13 @@ document.createElement("article" );
 						NCLB Waiver Request for California CORE Districts Approved
                                                 </a>	<br> <br>
 <a class="link-homepage-feature" href="https://ed.stanford.edu/news/data-action-community-approach-improving-youth-outcomes">
-						From Data to Action Book 
+						From Data to Action Book </a>
 <br> <br>
                                                 <a class="link-homepage-feature" href="https://ed.stanford.edu/news/new-faculty-director-gardner-center">
 						Prudence Carter Named New Faculty Director 
                                                 </a>	
 					<br>
                                        
-					</p>
-					<p>
-						
 					</p>
 				</div>
 			</div>
@@ -180,7 +177,7 @@ Communities for Change 2013: Breaking Down Barriers to Bridge the Achievement Ga
                      <li class=plugin>
                         <a title="Follow JGC on Facebook" href="http://www.facebook.com/gardnercenter">
                           <img src="/images/index/f_logo.jpg"></a>
-                     </li>http://www.ed.gov/news/press-releases/obama-administration-approves-nclb-waiver-request-california-core-districts
+                     </li>
                      <li class=plugin>
                         <a title="Follow JGC on Twitter" href="http://www.twitter.com/gardnercenter">
                           <img src="/images/index/follow_on_twitter.png"></a>
