Maureen and prudence added

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -20,12 +20,20 @@
 	  <p><a href="mailto:milbrey@stanford.edu">milbrey@stanford.edu</a></p>
 	  <br>
 
+  <a class="header-link" href="/about_jgc/team_bios/prudence.html">Prudence Carter</a>
+	  <p>Faculty Director</p>
+	  <p><a href="mailto:plcarter@stanford.edu">plcarter@stanford.edu</a></p>
+	  <br>
+
 	  <a class="header-link" href="/about_jgc/team_bios/amy.html">Amy Gerstein</a>
 	  <p>Executive Director</p>
 (650) 736-2064<br>
 	  <p><a href="mailto:gerstein@stanford.edu">gerstein@stanford.edu</a></p>
 	  <br>
-
+<a class="header-link" href="/about_jgc/team_bios/jorge.html">Jorge Ruiz de Velasco</a>
+	  <p>Associate Director</p>
+	  <p><a href="mailto:jorge@stanford.edu">jorge@stanford.edu</a></p>
+	  <br>
 	  <hr class="short-thick-rule">
           
 	 
