--- a/about_jgc/team_bios/content-maureen.html
+++ b/about_jgc/team_bios/content-maureen.html
@@ -5,8 +5,8 @@
         <div class="jgc-content-feature-item-left">
    <h1 class="content-text-header">Maureen Carew</h1>
 <span class="content-bold">Senior Community Engagement Associate</span><br>
-<br>
-<p>
+<p><br>
+<img class="bio-std" src="/images/team/Maureen.jpg">
 Maureen Carew is a Senior Community Engagement Associate and she leads our work with the Oakland Education Cabinet and San Francisco’s Mission Promise Neighborhood Initiative. She comes to the Gardner Center directly from San Francisco Unified School District where she led postsecondary success initiatives in partnership with City College of San Francisco, San Francisco State University, and the Mayor’s Office. Through these system change initiatives, these institutions were able to use data analyses to drive policy and practice changes. Prior to working for the school district, Maureen served as executive director of several San Francisco nonprofits serving low-income or disadvantaged families and youth including Leadership High School, an equity focused, urban, charter high school. Maureen specializes in public/private collaborations leveraging community based assets to increase the efficacy of public institutions serving families. Maureen served as a Peace Corps volunteer in Paraguay. She is a first generation college graduate and received her BA from Franklin Pierce College. 
 </p>
 
