--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -13,15 +13,11 @@
 	  <div class="column-outer">
    	    <div class="column-inner-box">
 
-          <a class="header-link" href="/about_jgc/team_bios/milbrey.html">Milbrey McLaughlin</a>
-	  <p>Founding Director</p>
-	  <p>David Jacks Professor of Education & Public Policy, Stanford University</p>
-(650) 323-6736<br>
-	  <p><a href="mailto:milbrey@stanford.edu">milbrey@stanford.edu</a></p>
-	  <br>
+         
 
   <a class="header-link" href="/about_jgc/team_bios/prudence.html">Prudence Carter</a>
 	  <p>Faculty Director</p>
+<p>Professor of Education & (by courtesy) Sociology, Stanford University
 	  <p><a href="mailto:plcarter@stanford.edu">plcarter@stanford.edu</a></p>
 	  <br>
 
@@ -29,6 +25,12 @@
 	  <p>Executive Director</p>
 (650) 736-2064<br>
 	  <p><a href="mailto:gerstein@stanford.edu">gerstein@stanford.edu</a></p>
+	  <br>
+ <a class="header-link" href="/about_jgc/team_bios/milbrey.html">Milbrey McLaughlin</a>
+	  <p>Founding Director</p>
+	  <p>David Jacks Professor of Education & Public Policy, Stanford University</p>
+(650) 323-6736<br>
+	  <p><a href="mailto:milbrey@stanford.edu">milbrey@stanford.edu</a></p>
 	  <br>
 <a class="header-link" href="/about_jgc/team_bios/jorge.html">Jorge Ruiz de Velasco</a>
 	  <p>Associate Director</p>
@@ -82,12 +84,6 @@
 	  <p>Project Coordinator</p>
 (650) 498-4889<br>	  
 <p><a href="mailto:nduong@stanford.edu">nduong@stanford.edu</a></p>
-          <br>
-
-	  <a class="header-link" href="/about_jgc/team_bios/kristin.html">Kristin Geiser</a>
-	  <p>Social Science Research Associate</p>
-(650) 498-4889<br>	  
-<p><a href="mailto:kgeiser@stanford.edu">kgeiser@stanford.edu</a></p>
           <br>
 
           <a class="header-link" href="/about_jgc/team_bios/mary.html">Mary Hofstedt</a>
