--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -16,6 +16,7 @@
 
  <ul>
 <li>Annenberg Institute for School Reform </li>
+<li>The University of Chicago Consortium on Chicago School Research</li>
 <li>Dallas Independent School District</li>
 <li>New Visions for Public Schools - New York</li>
 <li>Pittsburgh Public Schools</li>
@@ -65,9 +66,9 @@
 
 <span class="content-bold">The CRIS Initiative:  Background, Strategies and Activities</span>
 
-<p>The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University and the Annenberg Institute for School Reform (AISR) at Brown University are partnering on a three-year initiative funded by the Bill and Melinda Gates Foundation to develop models for College Readiness Indicator Systems (CRIS).  The CRIS initiative involves close collaboration with a small number of selected school districts or school networks across the country—several of which have already been deeply involved in the development and implementation of EWSs. The JGC is developing and studying the implementation of the tri-level CRIS in conjunction with districts, using a flexible, “design-build” approach.  The AISR is focusing on cross-site learning; brokering expertise and supports for districts; understanding issues related to district, municipal, state, and federal contexts; and process documentation.</p>
+<p>The John W. Gardner Center for Youth and Their Communities (Gardner Center) at Stanford University, the Annenberg Institute for School Reform (AISR) at Brown University, and The University of Chicago Consortium on Chicago School Research (UChicago CCSR) are partnering on a three-year initiative funded by the Bill and Melinda Gates Foundation to develop models for College Readiness Indicator Systems (CRIS).  The CRIS initiative involves close collaboration with a small number of selected school districts or school networks across the country—several of which have already been deeply involved in the development and implementation of EWSs. The Gardner Center is developing and studying the implementation of the tri-level CRIS in conjunction with districts, using a flexible, “design-build” approach.  The AISR is focusing on cross-site learning; brokering expertise and supports for districts; understanding issues related to district, municipal, state, and federal contexts; and process documentation.</p>
 <br>
-<p>Specifically the JGC supports districts by:<p>
+<p>Specifically the Gardner Center supports districts by:<p>
 <br>
 <ul>
 <li> Synthesizing the latest research on indicators associated with the key domains of college readiness (academic preparedness, academic tenacity, and college knowledge) to create an empirically-based foundation for the work;</li>
