--- a/about_jgc/team_bios/content-prudence.html
+++ b/about_jgc/team_bios/content-prudence.html
@@ -5,10 +5,15 @@
         <div class="jgc-content-feature-item-left">
            <h1 class="content-text-header">Prudence Carter</h1>
            <span class="content-bold">Faculty Director</span><br>
+<span class="content-bold">Professor of Education and (by courtesy) Sociology, Stanford University</span><br>
 	   <br>
 	  <p>
           <img class="bio-std" src="/images/team/prudence.jpg">
-<p>Prudence L. Carter became the faculty director of the Gardner Center in 2013. She is Professor of Education and (by courtesy) Sociology at the Stanford Graduate School of Education. Prior to joining Stanford University, she was associate professor of sociology at Harvard University and a Ford Foundation postdoctoral fellow with the program on poverty, the underclass and public policy and the program for research on black Americans at the University of Michigan. Professor Carter’s research and teaching expertise are in the areas of inequality and the sociology of education, with a particular focus on race, ethnicity, class, gender, culture and identity. She is the author of Keepin’ It Real: School Success beyond Black and White; Stubborn Roots: Race, Culture, and Inequality in U.S. & South African Schools; and co-editor of Closing the Opportunity Gap: What America Must Do to Give Every Child an Even Chance. Carter, a product of public schools in Mississippi, earned a BS from Brown University, an MA in Sociology and Education from Columbia University, Teachers College, and an M. Phil. and PhD in Sociology from Columbia University.
+<p>Prudence L. Carter is Professor of Education and (by courtesy) of Sociology at Stanford, and Faculty Director of the John W. Gardner Center for Youth and Their Communities.  Prior to joining the Stanford faculty in 2007, Dr. Carter was Associate Professor of Sociology at Harvard University. Her expertise ranges from issues of youth identity and race, class, and gender, urban poverty, social and cultural inequality, the sociology of education and mixed research methods. She is the author of the award-winning book, Keepin’ It Real: School Success beyond Black and White (2005); Stubborn Roots: Race, Culture, and Inequality in U.S. & South African Schools (2012); and co-editor of Closing the Opportunity Gap:  What America Must Do to Give Every Child an Even Chance (all published by Oxford University Press), along with numerous other journal articles, book chapters, and essays.</p>
+<br>
+<p>A native Mississippian, Dr. Carter is a product of public elementary and secondary schools.  She graduated from Brown University with a Bachelor of Science degree in applied mathematics and economics, earned an M.A. in Sociology and Education from Columbia University, Teachers College, and an M. Phil. and Ph.D. in Sociology from Columbia University. 
+
+ 
           </p>
 
          </div>
