--- a/about_jgc/team_bios/content-jorge.html
+++ b/about_jgc/team_bios/content-jorge.html
@@ -3,8 +3,8 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
-           <h1 class="content-text-header">Prudence Carter</h1>
-           <span class="content-bold">Faculty Director</span><br>
+           <h1 class="content-text-header">Jorge Ruiz de Velasco</h1>
+           <span class="content-bold">Associate Director</span><br>
 	   <br>
 	  <p>
 <p>Jorge Ruiz de Velasco joined the Gardner Center as Associate Director in 2013. Dr. Velasco comes to Stanford from Berkeley Law, where he was Director of the Warren Institute's Program on Education Law and Policy. The focus of his work is on the study and promotion of change in public schools, the implications of education reform for disadvantaged students, education law and policy, and the effect of immigration on schools and communities. Prior to his appointment at the Warren Institute, he served as Director of the Institute for Research on Education Policy and Practice at Stanford, and has served terms as a Program Officer for Educational Opportunity and Scholarship at the Ford Foundation, and as a Senior Program Officer at both the James Irvine and William & Flora Hewlett Foundations. Dr. Velasco also served as a Senior Research Associate at The Urban Institute and as a lawyer and policy analyst for the U.S. Department of Education’s Office for Civil Rights. He is a graduate of Harvard College (1984), and the Boalt Hall School of Law (1987). Subsequently, he earned an M.A. in Education Administration and Policy Analysis (1994) and a Ph.D. in Political Science (1999), both from Stanford University.
