--- a/our_work/content-ece.html
+++ b/our_work/content-ece.html
@@ -19,6 +19,9 @@
 
 <h1 class="content-text-header">Publications</h1>
 <ul>
+<li><a href="/resources/reports/ECE_Linkages_TOCReport_2013.pdf">Early Childhood Community School Linkages: Advancing a Theory of Change - September 2013</a></li>
+</ul>
+<ul>
 <li><a href="/resources/publications/GardnerCenter_RB_ECELinkages_2013.pdf">Improving the Quality and Continuity of Practice Across Early Childhood Education and Elementary Community School Settings - January 2013</a></li>
 </ul>
 <ul>
