--- a/our_work/content-yda.html
+++ b/our_work/content-yda.html
@@ -14,6 +14,8 @@
 <li><a href="/our_work/alt-ed_transitions.html">Alternative Education Transitions</a></li>
 <li><a href="/our_work/foster_youth.html">Educational Outcomes of Dependent Youth</a></li>
 <li><a href="/our_work/english_learner.html">English Learner After School Program Participation in Redwood City</a></li>
+<li><a href="/our_work/gardengrove.html">Garden Grove Unified School District</a></li>
+<li><a href="/our_work/mcoc.html">Mega Network Continuum of Care</a></li>
 <li><a href="/our_work/fitness_achievement.html">Physical Fitness and Academic Achievement in Redwood City</a></li>
 <li><a href="/our_work/pfa.html">Preschool for All </li>
 <li><a href="/our_work/community_schools_eval.html">Redwood City Community Schools Evaluation</a></li>
@@ -24,50 +26,7 @@
 <li><a href="/our_work/motivation.html">Youth Development and Motivation</a></li>
 </ul>
 <br>
-<h1 class="content-text-header">Active YDA Partners</h1>
-<span class="content-bold">San Francisco City and County </span><br>
-<ul>
-<li>City College of San Francisco</li>
-<li>San Francisco Department of Children, Youth and Their Families </li>
-<li>San Francisco Unified School District</li>
-</ul>
-<br>
-
-<span class="content-bold">San Mateo County</span><br>
-<ul>
-<li>Cabrillo Unified School District</li>
-<li>City of Redwood City</li>
-
-<ul>
-<li>Library</li>
-<li>Parks, Recreation and Community Services</li>
-<li>Police Department (PAL) </li>
-<li>Project READ</li>
-</ul>
-</ul>
-<ul>
-<li>Redwood City School District</li>
-<li>San Mateo County Community College District</li>
-<li>San Mateo County Community-Based Organizations</li>
-</ul>
-<ul>
-<li>Boys & Girls Clubs of the Peninsula</li>
-<li>Peninsula Bridge</li>
-<li>Riekes Center</li>
-<li>Sequoia YMCA</li>
-<li>SPARK</li>
-</ul>
-<ul>
-<li>San Mateo County Health System</li>
-
-<li>San Mateo County Human Services Agency</li>
-
-<li>San Mateo County Office of Education</li>
-
-<li>Sequoia Union High School District</li>
-</ul>
-</aside>
-<br>
+</div>
 
 <h1 class="content-text-header">What is the Youth Data Archive (YDA)? </h1>
 
@@ -118,19 +77,19 @@ decreased duplication, and identification of gaps in services; </li>
 
 <h1 class="content-text-header">Future Directions</h1>
 
-<p>The JGC is currently in the process of building partnerships with various organizations
+<p>The Gardner Center is currently in the process of building partnerships with various organizations
 
-and institutions locally, regionally and nationally to further develop the YDA’s ability
+and institutions locally and regionally to further develop the YDA’s ability
 
 to support youth and the institutions and communities that serve them. The
 
-YDA is well underway in San Mateo County, CA and San Francisco County, CA and is
+YDA is well underway in San Mateo County, CA; Orange County, CA; and San Francisco County, CA and is
 
-in development in Santa Clara, and Alameda Counties as well. For more information please
+in development in Santa Clara and Alameda Counties as well. For more information please
 
-contact Kara Dukakis, Senior Community Engagement Associate, John W. Gardner Center, at (650) 721.2971 or
+contact Rebecca London, Senior Researcher at
 
-<a href= "mailto:kdukakis@stanford.edu">kdukakis@stanford.edu.</a>
+<a href= "mailto:rlondon@stanford.edu">rlondon@stanford.edu.</a>
 
 </p>
 
