--- a/resources/content-reports.html
+++ b/resources/content-reports.html
@@ -6,6 +6,9 @@
       
 
 <h1 class="title-page-header-big">Reports</h1><br>
+<a href="/resources/reports/ECE_Linkages_TOCReport_2013.pdf">Early Childhood Community School Linkages: Advancing a Theory of Change, September 2013</a>
+<br>
+<br>
 <a href="/resources/reports/OKF_Report_12.12.pdf">Oakland Kids First: Peers Advising Students to Succeed, December 2012</a><br>
 <br>
 <a href="/resources/reports/HealthySchoolsInitiativeStudy42013.pdf">Healthy Schools Initiative: Implementation Study in Four San Mateo County School Districts, December 2012</a><br>
