--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -32,6 +32,7 @@
 	   
 	  <h1 class="content-text-header">E</h1>
 		<ul style="list-style: none;">
+   <li><a href="oepacollaborative.html">East Palo Alto Mega-Network Continuum of Care</a></li>
 			<li><a href="ece.html">Early Childhood Education Linkages</a></li>
 			<li><a href="english_learner.html">English Learner After School Program Participation in Redwood City</a></li>
 			<li><a href="foster_youth.html">Educational Outcomes of Dependent Youth</a></li>
@@ -51,7 +52,6 @@
 
 <h1 class="content-text-header">M</h1>
 		<ul style="list-style: none;">
-    <li><a href="mcoc.html">Mega-Network Continuum of Care</a></li>
     <li><a href="missionpromise.html">Mission Promise Neighborhood</a></li>
     </ul><br>
 
