pubs added and content updates

--- a/our_work/content-bts.html
+++ b/our_work/content-bts.html
@@ -21,6 +21,8 @@
       <h1 class="content-text-header">Publications</h1>
 
 <ul>
+<li>Developing Alternative Placement Criteria for English Courses at City College of San Francisco (<a href="/resources/publications/BtSIssueBrief10.3.13.pdf" class="link-no-underline">Issue Brief</a>)
+<li>Developing Alternative Placement Criteria for Math and English at City College of San Francisco (<a href="/resources/publications/BtSSnapshot10.3.13.pdf" class="link-no-underline">Snapshot</a>)
 <li>Math Placement Acceleration Initiative at the City College of San Francisco Developed with San Francisco Unified School District (<a href="/resources/publications/BtSMathPlacementPolicyIssueBrief2012.pdf" class="link-no-underline">Issue Brief</a>)
 <li>English Articulation Between the San Francisco Unified School District and the City College of San Francisco (<a href="/resources/publications/Gurantz_IB_120203_English Articulation Between the San Francisco Unified School District and the City College of San Francisco.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/Gurantz_SS_120203_English Articulation Between the San Francisco Unified School District and the City College of San Francisco.pdf" class="link-no-underline">Snapshot</a>)</li>
 <li>Secondary to Postsecondary Transitions for Youth in San Francisco Unified School District (<a href="/resources/publications/JGC_IB_SFUSDPostSecondaryTransition2010.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_SFUSDPostSecondaryTransition2011.pdf" class="link-no-underline">Snapshot</a>)</li>
