--- a/resources/content-journals.html
+++ b/resources/content-journals.html
@@ -7,8 +7,8 @@
 
        <h1 class="title-page-header-big">Academic Journal and Chapters</h1>
 <br>
-
-
+<p>Ardoin, N., Castrechini, S., and Hofstedt, M. (September 2013). <span class="content-italic"><a href="http://onlinelibrary.wiley.com/doi/10.1111/j.1746-1561.2011.00608.x/abstract">Youth-Community-University Partnerships and Sense of Place: Two Case Studies of Youth Participatory Action Research.</a></span> Children's Geographies.</p>
+<br>
 <p>London, R. and Castrechini, S. (July 2011). <span class="content-italic"><a href="http://onlinelibrary.wiley.com/doi/10.1111/j.1746-1561.2011.00608.x/abstract">A Longitudinal Examination of the Link Between Youth Physical Fitness and Academic Achievement.</a></span> Journal of School Health, Volume 81, Issue 7, pp. 400–408.</p>
 <br>
 
