--- a/resources/content-snapshots.html
+++ b/resources/content-snapshots.html
@@ -8,6 +8,7 @@
 <br>
 <span class="content-bold">2013</span>
 <ul style="list-style: none;">
+<li><a href="/resources/publications/BtSSnapshot10.3.13.pdf" class="link-no-underline">Developing Alternative Placement Criteria for Math and English at City College of San Francisco</a></li>
 <li><a href="/resources/publications/OEPAGradRates2013.pdf" class="link-no-underline">Graduation Rates for East Palo Alto Students in the Sequoia Union High School District </a></li>
 <li><a href="/resources/publications/DCYF_SS_7.2013.pdf" class="link-no-underline">Participation Among San Francisco Unified School District Students in Programs Offered by the Department of Children, Youth, & Their Families</a></li>
 <li><a href="/resources/publications/SHS_SS_7.2013.pdf" class="link-no-underline">Examining Students' Perceptions of the School Environment: Sequoia High School's School Climate Survey</a></li>
