new content plus Jorge bio

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -7,7 +7,7 @@
 
 <br>
 <br>
-<a class="link-underlined" href="https://stanfordcareers.stanford.edu/job-search?jobId=60076" target="_blank">CORE Project Facilitator</a>
+<a class="link-underlined" href="https://stanfordcareers.stanford.edu/job-search?jobId=18185" target="_blank">Policy Analyst</a>
 
 
          </div>
