--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ document.createElement("article" );
 				</div>
 				<div class="feature_text">
 					<p>
-  <li><a class="link-homepage-feature" href="news/news.html">October 15, 2013<br>
+  <li><a class="link-homepage-feature" href="http://edpov.stanford.edu/events/prudence-carter-and-sean-reardon-workshop-poverty-inequality-and-education">October 15, 2013<br>
 Prudence Carter and Sean Reardon: The Workshop on Poverty, Inequality, and Education</a><br><br>
 
   <li><a class="link-homepage-feature" href="news/news.html">October 23-25, 2013<br>
